syntax = "proto3";

package test;

option go_package = "github.com/devjuank/go-protobuffers-grpc;testpb";

message Test {
    string id = 1;
    string name = 2;
}

message GetTestRequest {
    string id = 1;
}

message SetTestResponse{
    string id = 1;
    string name = 2;
}

service TestService {
    rpc GetTest(GetTestRequest) returns (Test);
    rpc SetTest(Test) returns (SetTestResponse);
}

//protoc --proto_path=testpb --go_out=testpb --go_opt=paths=source_relative testpb/test.proto